--- a/sembast/pubspec.yaml
+++ b/sembast/pubspec.yaml
@@ -10,7 +10,7 @@ funding:
   - https://github.com/sponsors/alextekartik
 
 environment:
-  sdk: ^3.5.0
+  sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
   meta: ">=1.3.0 <3.0.0"
